fixed margins on tablet

--- a/_src/assets/scss/core/_mixins.scss
+++ b/_src/assets/scss/core/_mixins.scss
@@ -24,6 +24,7 @@ ul{
     font-weight: 500;
     font-size: 22px;
     color: $colorTitle;
+    margin: 0;
 }
 
 .main-text {
