--- a/_src/assets/scss/layout/_aboutus.scss
+++ b/_src/assets/scss/layout/_aboutus.scss
@@ -124,13 +124,13 @@
     text-align: right;
 }
 .member-description {
-    margin-left: 45px;
+    margin-left: 30px;
 }
 
 .member-description.par {
     text-align: right;
     margin-left: 0;
-    margin-right: 45px;
+    margin-right: 30px;
     
 }
 .main-text.description {
@@ -164,7 +164,7 @@
 }
 
 .menu_rrss{
-    padding: 10px 0;
+    padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
