--- a/_src/assets/scss/layout/_footer.scss
+++ b/_src/assets/scss/layout/_footer.scss
@@ -60,11 +60,11 @@
     }
     
     .left-menu{
-        margin-left: 120px;
+        margin-left: 60px;
     }
 
     .right-menu{
-        margin-right: 120px;
+        margin-right: 60px;
     }
 
     .logo-mobile{
